--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "fastmcp>=2.8.0",
     "httpx>=0.24.0",
     "pyyaml>=6.0",
+    "uvicorn>=0.23.0",
+    "starlette>=0.27.0",
 ]
 
 [project.optional-dependencies]
