Some Docker stuff

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,17 @@ venv.bak/
 *.swp
 *.swo
 *~
+
+# Logs
+*.log
+logs/
+server.log
+
+# Coverage reports
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Docker
+.env
+docker-compose.override.yml
