--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # Required: Your Zerion API key
 ZERION_API_KEY=zk_dev_your_api_key_here
 
+# Optional: Webhook callback URL for testing
+# (webhook receiver must be deployed separately)
+# WEBHOOK_CALLBACK_URL=https://webhook.site/your-unique-url
+
 # Optional: Logging configuration
 LOG_LEVEL=INFO
 LOG_FORMAT=text
