--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,40 @@ api_key: "zk_dev_xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 logging:
   # Log level: DEBUG, INFO, WARN, ERROR
   level: "DEBUG"
-  
+
   # Log format: text (human-readable) or json (structured)
   format: "text"
+
+# Pagination configuration
+pagination:
+  # Default page size for paginated requests (max: 100)
+  default_page_size: 100
+
+  # Maximum number of pages to fetch with auto-pagination helper
+  # This prevents accidental quota exhaustion
+  max_auto_pages: 50
+
+# Retry policy for rate limiting (429 Too Many Requests)
+retry_policy:
+  # Maximum number of retry attempts
+  max_attempts: 5
+
+  # Base delay for exponential backoff (seconds)
+  base_delay: 1
+
+  # Maximum delay between retries (seconds)
+  max_delay: 60
+
+  # Exponential backoff multiplier
+  exponential_base: 2
+
+# Wallet indexing handling (202 Accepted responses)
+wallet_indexing:
+  # Delay between retries when wallet is being indexed (seconds)
+  retry_delay: 3
+
+  # Maximum number of retry attempts for indexing
+  max_retries: 3
+
+  # Automatically retry 202 responses (recommended)
+  auto_retry: true
