--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pyyaml>=6.0",
     "uvicorn>=0.23.0",
     "starlette>=0.27.0",
+    "tenacity>=8.0.0",
 ]
 
 [project.optional-dependencies]
